--- a/src/styles.css
+++ b/src/styles.css
@@ -107,11 +107,9 @@ button.big:hover {
 }
 
 .rank{
-  width:200px; 
-  height:200px; 
-  max-width:200px; 
-  padding-top: 180px;
-  padding-right: 120px;
+  width:140px; 
+  height:140px; 
+  max-width:140px; 
 }
 
 
@@ -137,6 +135,12 @@ button.big:hover {
   width:30px; 
   height:30px; 
   max-width:30px; 
+}
+
+.uni{
+  width:200px; 
+  height:40px; 
+  max-width:200px; 
 }
 
 img.media{
