--- a/src/styles.css
+++ b/src/styles.css
@@ -174,6 +174,16 @@ img.mediaS{
    cursor: pointer; 
 }
 
+img.edit{
+  width:20px; 
+  height:auto; 
+  max-width:20px; 
+  margin-right: 5px; 
+  margin-top: 2px; 
+  position:relative; 
+  cursor: pointer; 
+}
+
 img.media:hover{
   transform: scale(1.2)
 }
@@ -280,6 +290,7 @@ img.mediaS:hover{
   border-bottom-left-radius: 80px;
   border-bottom-right-radius: 80px;
 }
+
 .rectangleBlue {
   margin:auto;
   height: 40px;
@@ -296,6 +307,32 @@ img.mediaS:hover{
   border-bottom-right-radius: 80px;
 }
 
+.rectangleInfo {
+  margin:auto;
+  height: 230px;
+  width: 400px;
+  background-color: #f1f0f0;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  border: 2px solid #2588B2;
+  margin-top: 170px; 
+  margin-right: 50px; 
+  float: right; 
+  overflow:hidden; 
+  position:relative
+}
+
+input{
+  padding: 10px 10px;
+  width: 350px;
+  border: 1px solid #050617;
+  border-radius: 6px;
+  box-sizing: border-box;
+  margin-bottom: 15px;
+  font: 12px 'Rubik'
+}
 
 
 
