--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Rubik');
+
 #app {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -55,7 +57,12 @@ button{
   position: absolute;
   width: 150px;
   height: 40px;
-  cursor: pointer;
+  cursor: pointer
+}
+
+button.btop{
+  margin-left:25px;
+  bottom:15px
 }
 
 button:hover {
@@ -153,6 +160,7 @@ button.big:hover {
   height:40px; 
   max-width:200px; 
 }
+
 
 .ga{
   width:520px; 
@@ -285,6 +293,11 @@ img.mediaS:hover{
   margin-top: 20px;
 }
 
+.x900{
+  width: 100%; 
+  overflow: hidden; 
+  height:900px; 
+}
 
 .rectangleWhite {
   margin:auto;
@@ -341,32 +354,441 @@ input{
 }
 
 
+@media screen and (max-width: 1100px){
 
-@media screen and (max-width: 700px){
-
+  b{
+    font: 15px 'Rubik' ;
+    font-weight: bold;
+    color: #2588B2;
+    padding-right: 10px;
+  }
+  
+  p{
+    font: 15px 'Rubik' ;
+    color: #ffffff;
+  }
   .top{ 
     height: 300px;
     min-height: 300px;
     min-width: 500px;
     max-width: 1000px;
-}
-
-}
-/*@media screen and (max-width: 1000px){
-
-  body {
-   transform: scale(0.6);
-   transform-origin: 0 0;
-   background: #050617;   
   }
 
-  html,body{
-    overflow-x: visible;
+  b.bar{
+    cursor: pointer; 
+    padding-right: 20px;
+  }
+
+  .title{
+    font: 25px 'Rubik' ;
+    font-weight: bold;
+    color: #2588B2;
+    cursor: pointer; 
+    position: relative;
+    top: 6px;
+    left: 15px;
+    float: left;
+  }
+  
+  .logo{
+    width:40px; 
+    height:40px; 
+    max-width:100px; 
+    cursor: pointer; 
+    padding-left: 10px;
+    float: left;
+  }
+
+  button{
+    font: 11px 'Rubik' ;
+    font-weight: bold;
+    color: #ffffff;
+    background: #2588B2;
+    border-top-left-radius: 80px;
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    overflow: hidden;
+    border: 2px solid #ffffff;
+    position: absolute;
+    width: 100px;
+    height: 30px;
+    cursor: pointer; 
+  }
+
+  button.btop{
+    margin-left:5px; 
+    bottom:25px;
+  }
+
+  .rectangleInfo {
+    margin:auto;
+    height: 213px;
+    width: 290px;
+    background-color: #f1f0f0;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border: 2px solid #2588B2;
+    margin-top: 0px; 
+    margin-right: 50px; 
+    float: right; 
+    overflow:hidden; 
+    position:relative
+  }
+
+  .uni{
+    width:150px; 
+    height:30px; 
+    max-width:160px; 
+    padding-right: 50px;
+  }
+
+  .mid{
+    background: url("./assets/B2.png");
+    background-size: 100%;
+    height: 300px;
+    min-height: 400px;
+    min-width: 800px;
+    max-width: 1200px;
+    background-repeat: no-repeat;
+    margin:0 auto;
+  }
+
+  .rank{
+    width:100px; 
+    height:100px; 
+    max-width:100px; 
+  }
+
+  button.white{
+    font: 13px 'Rubik' ;
+    font-weight: bold;
+    color: #2588B2;
+    background: #ffffff;
+    border-top-left-radius: 80px;
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    overflow: hidden;
+    border: 2px solid #2588B2;
+    width: 120px;
+    height: 40px;
+  }
+
+  .how{
+    background: url("./assets/B7.png");
+    background-size: 100%;
+    height: 400px;
+    min-height: 400px;
+    min-width: 600px;
+    max-width: 600px;
+    margin:0 auto;
+    margin-top: 20px; 
+    background-repeat: no-repeat;
+  }
+
+  .x900{
+    width: 100%; 
+    overflow: hidden; 
+    height:700px; 
+  }
+
+  .mid3{
+    background: url("./assets/B5.png");
+    background-size: 100%;
+    height: 300px;
+    width: 650px;
+    min-height: 300px;
+    min-width: 650px;
+    margin:0 auto;
+    background-repeat: no-repeat;
+  }
+
+  .bot{
+    background: url("./assets/Bg.gif");
+    background-size: 100%;
+    height: 500px;
+    min-height: 500px;
+    min-width: 800px;
+    max-width: 1200px;
+    margin:0 auto;
+    background-repeat: no-repeat;
+  }
+
+  img.mediaS{
+    width:30px; 
+    height:auto; 
+    max-width:30px; 
+    margin-right: 10px; 
+    margin-top: 5px; 
+    position:relative; 
+    cursor: pointer; 
+ }
+
+ .mid2{
+    background: url("./assets/B3.png");
+    background-size: 100%;
+    height: 150px;
+    min-height: 150px;
+    min-width: 800px;
+    max-width: 1500px;
+    margin:0 auto;
+    background-repeat: no-repeat;
+  }
+
+  img.media{
+    width:50px; 
+    height:auto; 
+    max-width:50px; 
+    margin-right: 30px; 
+    margin-top: 15px; 
+    position:relative; 
+    cursor: pointer; 
+ }
+
+ .logoB{
+  width:80px; 
+  height:80px; 
+  max-width:80px; 
+  padding-left: 20px;
+  padding-top: 40px;
+  float: left;
 }
 
- 
+.fodder{
+  background: url("./assets/B6.png");
+  background-size: 100%;
+  height: 200px;
+  min-height: 200px;
+  min-width: 1700px;
+  max-width: 2000px;
+  margin:0 auto;
+  background-repeat: no-repeat;
+}
+  
 }
 
+@media screen and (max-width: 660px){
+
+  b{
+    font: 12px 'Rubik' ;
+    font-weight: bold;
+    color: #2588B2;
+    padding-right: 10px;
+  }
+  
+  p{
+    font: 12px 'Rubik' ;
+    color: #ffffff;
+  }
+
+  .top{ 
+    height: 250px;
+    min-height: 250px;
+    min-width: 500px;
+    max-width: 1000px;
+  }
+
+  b.bar{
+    cursor: pointer; 
+    padding-right: 14px;
+  }
+
+  .title{
+    font: 20px 'Rubik' ;
+    font-weight: bold;
+    color: #2588B2;
+    cursor: pointer; 
+    position: relative;
+    top: 5px;
+    left: 10px;
+    float: left;
+  }
+  
+  .logo{
+    width:30px; 
+    height:30px; 
+    max-width:80px; 
+    cursor: pointer; 
+    padding-left: 10px;
+    float: left;
+  }
+
+  button{
+    font: 11px 'Rubik' ;
+    font-weight: bold;
+    color: #ffffff;
+    background: #2588B2;
+    border-top-left-radius: 80px;
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    overflow: hidden;
+    border: 2px solid #ffffff;
+    position: absolute;
+    width: 100px;
+    height: 30px;
+    cursor: pointer; 
+  }
+
+  button.btop{
+    margin-left:5px; 
+    bottom:25px;
+  }
+
+  .rectangleInfo {
+    margin:auto;
+    height: 213px;
+    width: 290px;
+    background-color: #f1f0f0;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    border: 2px solid #2588B2;
+    margin-top: 0px; 
+    margin-right: 50px; 
+    float: right; 
+    overflow:hidden; 
+    position:relative
+  }
+
+  .uni{
+    width:150px; 
+    height:30px; 
+    max-width:160px; 
+    padding-right: 50px;
+  }
+
+  .mid{
+    background: url("./assets/B2.png");
+    background-size: 100%;
+    height: 300px;
+    min-height: 400px;
+    min-width: 800px;
+    max-width: 1200px;
+    background-repeat: no-repeat;
+    margin:0 auto;
+  }
+
+  .rank{
+    width:100px; 
+    height:100px; 
+    max-width:100px; 
+  }
+
+  button.white{
+    font: 13px 'Rubik' ;
+    font-weight: bold;
+    color: #2588B2;
+    background: #ffffff;
+    border-top-left-radius: 80px;
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    overflow: hidden;
+    border: 2px solid #2588B2;
+    width: 120px;
+    height: 40px;
+  }
+
+  .how{
+    background: url("./assets/B7.png");
+    background-size: 100%;
+    height: 400px;
+    min-height: 400px;
+    min-width: 600px;
+    max-width: 600px;
+    margin:0 auto;
+    margin-top: 20px; 
+    background-repeat: no-repeat;
+  }
+
+  .x900{
+    width: 100%; 
+    overflow: hidden; 
+    height:700px; 
+  }
+
+  .mid3{
+    background: url("./assets/B5.png");
+    background-size: 100%;
+    height: 300px;
+    width: 650px;
+    min-height: 300px;
+    min-width: 650px;
+    margin:0 auto;
+    background-repeat: no-repeat;
+  }
+
+  .bot{
+    background: url("./assets/Bg.gif");
+    background-size: 100%;
+    height: 500px;
+    min-height: 500px;
+    min-width: 800px;
+    max-width: 1200px;
+    margin:0 auto;
+    background-repeat: no-repeat;
+  }
+
+  img.mediaS{
+    width:30px; 
+    height:auto; 
+    max-width:30px; 
+    margin-right: 10px; 
+    margin-top: 5px; 
+    position:relative; 
+    cursor: pointer; 
+ }
+
+ .mid2{
+    background: url("./assets/B3.png");
+    background-size: 100%;
+    height: 150px;
+    min-height: 150px;
+    min-width: 800px;
+    max-width: 1500px;
+    margin:0 auto;
+    background-repeat: no-repeat;
+  }
+
+  img.media{
+    width:50px; 
+    height:auto; 
+    max-width:50px; 
+    margin-right: 30px; 
+    margin-top: 15px; 
+    position:relative; 
+    cursor: pointer; 
+ }
+
+ .logoB{
+  width:80px; 
+  height:80px; 
+  max-width:80px; 
+  padding-left: 20px;
+  padding-top: 40px;
+  float: left;
+}
+
+.fodder{
+  background: url("./assets/B6.png");
+  background-size: 100%;
+  height: 200px;
+  min-height: 200px;
+  min-width: 1700px;
+  max-width: 2000px;
+  margin:0 auto;
+  background-repeat: no-repeat;
+}
+
+}
+
+
+/*
 @media screen and (max-width: 700px){
 
   body {
