--- a/src/styles.css
+++ b/src/styles.css
@@ -159,6 +159,13 @@ button.big:hover {
   width:200px; 
   height:40px; 
   max-width:200px; 
+  margin-top: 100px;
+}
+
+.bsct{
+  width:300px; 
+  height:36px; 
+  max-width:300px; 
 }
 
 
@@ -299,6 +306,12 @@ img.mediaS:hover{
   height:900px; 
 }
 
+.x600{
+  height:620px;
+  width: 100%; 
+  min-width:600px
+}
+
 .rectangleWhite {
   margin:auto;
   height: 40px;
@@ -418,7 +431,7 @@ input{
 
   button.btop{
     margin-left:5px; 
-    bottom:25px;
+    bottom:30px;
   }
 
   .rectangleInfo {
@@ -442,7 +455,15 @@ input{
     width:150px; 
     height:30px; 
     max-width:160px; 
-    padding-right: 50px;
+    padding-right: 10px;
+    margin-top: 80px;
+  }
+
+
+  .ga{
+    width:420px; 
+    height:65px; 
+    max-width:420px; 
   }
 
   .mid{
@@ -489,6 +510,21 @@ input{
     background-repeat: no-repeat;
   }
 
+  button.big{
+    font: 16px 'Rubik' ;
+    font-weight: bold;
+    color: #ffffff;
+    background: #2588B2;
+    border-top-left-radius: 80px;
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    overflow: hidden;
+    border: 2px solid #ffffff;
+    width: 180px;
+    height: 50px;
+  }
+
   .x900{
     width: 100%; 
     overflow: hidden; 
@@ -526,6 +562,12 @@ input{
     position:relative; 
     cursor: pointer; 
  }
+
+ .x600{
+    height:520px;
+    width: 100%; 
+    min-width:600px
+  }
 
  .mid2{
     background: url("./assets/B3.png");
@@ -573,10 +615,10 @@ input{
 @media screen and (max-width: 660px){
 
   b{
-    font: 12px 'Rubik' ;
+    font: 10px 'Rubik' ;
     font-weight: bold;
     color: #2588B2;
-    padding-right: 10px;
+    padding-right: 5px;
   }
   
   p{
@@ -587,37 +629,37 @@ input{
   .top{ 
     height: 250px;
     min-height: 250px;
-    min-width: 500px;
-    max-width: 1000px;
+    min-width: 400px;
+    max-width: 800px;
   }
 
   b.bar{
     cursor: pointer; 
-    padding-right: 14px;
+    padding-right: 10px;
   }
 
   .title{
-    font: 20px 'Rubik' ;
+    font: 12px 'Rubik' ;
     font-weight: bold;
     color: #2588B2;
     cursor: pointer; 
     position: relative;
-    top: 5px;
-    left: 10px;
+    top: 10px;
+    left: 8px;
     float: left;
   }
   
   .logo{
-    width:30px; 
-    height:30px; 
-    max-width:80px; 
+    width:25px; 
+    height:25px; 
+    max-width:60px; 
     cursor: pointer; 
-    padding-left: 10px;
+    padding-left: 7px;
     float: left;
   }
 
   button{
-    font: 11px 'Rubik' ;
+    font: 8px 'Rubik' ;
     font-weight: bold;
     color: #ffffff;
     background: #2588B2;
@@ -626,16 +668,15 @@ input{
     border-bottom-left-radius: 80px;
     border-bottom-right-radius: 80px;
     overflow: hidden;
-    border: 2px solid #ffffff;
+    border: 1px solid #ffffff;
     position: absolute;
-    width: 100px;
-    height: 30px;
+    width: 70px;
+    height: 20px;
     cursor: pointer; 
   }
 
   button.btop{
-    margin-left:5px; 
-    bottom:25px;
+    bottom: 40px;
   }
 
   .rectangleInfo {
@@ -660,27 +701,40 @@ input{
     height:30px; 
     max-width:160px; 
     padding-right: 50px;
+    margin-top: 50px;
+  }
+
+  .bsct{
+    width:150px; 
+    height:25px; 
+    max-width:150px; 
+  }
+
+  .ga{
+    width:300px; 
+    height:50px; 
+    max-width:300px; 
   }
 
   .mid{
     background: url("./assets/B2.png");
     background-size: 100%;
-    height: 300px;
-    min-height: 400px;
-    min-width: 800px;
-    max-width: 1200px;
+    height: 200px;
+    min-height: 300px;
+    min-width: 550px;
+    max-width: 900px;
     background-repeat: no-repeat;
     margin:0 auto;
   }
 
   .rank{
-    width:100px; 
-    height:100px; 
-    max-width:100px; 
+    width:70px; 
+    height:70px; 
+    max-width:70px; 
   }
 
   button.white{
-    font: 13px 'Rubik' ;
+    font: 10px 'Rubik' ;
     font-weight: bold;
     color: #2588B2;
     background: #ffffff;
@@ -689,36 +743,51 @@ input{
     border-bottom-left-radius: 80px;
     border-bottom-right-radius: 80px;
     overflow: hidden;
-    border: 2px solid #2588B2;
-    width: 120px;
-    height: 40px;
+    border: 1px solid #2588B2;
+    width: 80px;
+    height: 27px;
   }
 
   .how{
     background: url("./assets/B7.png");
     background-size: 100%;
-    height: 400px;
-    min-height: 400px;
-    min-width: 600px;
-    max-width: 600px;
+    height: 300px;
+    min-height: 300px;
+    min-width: 450px;
+    max-width: 450px;
     margin:0 auto;
     margin-top: 20px; 
     background-repeat: no-repeat;
   }
 
+  button.big{
+    font: 15px 'Rubik' ;
+    font-weight: bold;
+    color: #ffffff;
+    background: #2588B2;
+    border-top-left-radius: 80px;
+    border-top-right-radius: 80px;
+    border-bottom-left-radius: 80px;
+    border-bottom-right-radius: 80px;
+    overflow: hidden;
+    border: 2px solid #ffffff;
+    width: 140px;
+    height: 40px;
+  }
+
   .x900{
     width: 100%; 
     overflow: hidden; 
-    height:700px; 
+    height:500px; 
   }
 
   .mid3{
     background: url("./assets/B5.png");
     background-size: 100%;
-    height: 300px;
-    width: 650px;
-    min-height: 300px;
-    min-width: 650px;
+    height: 200px;
+    width: 420px;
+    min-height: 200px;
+    min-width: 420px;
     margin:0 auto;
     background-repeat: no-repeat;
   }
@@ -726,10 +795,10 @@ input{
   .bot{
     background: url("./assets/Bg.gif");
     background-size: 100%;
-    height: 500px;
-    min-height: 500px;
-    min-width: 800px;
-    max-width: 1200px;
+    height: 350px;
+    min-height: 350px;
+    min-width: 600px;
+    max-width: 800px;
     margin:0 auto;
     background-repeat: no-repeat;
   }
@@ -744,33 +813,39 @@ input{
     cursor: pointer; 
  }
 
+ .x600{
+   height:420px;
+   width: 100%; 
+   min-width:300px
+ }
+
  .mid2{
     background: url("./assets/B3.png");
     background-size: 100%;
-    height: 150px;
-    min-height: 150px;
-    min-width: 800px;
-    max-width: 1500px;
+    height: 90px;
+    min-height: 90px;
+    min-width: 500px;
+    max-width: 900px;
     margin:0 auto;
     background-repeat: no-repeat;
   }
 
   img.media{
-    width:50px; 
+    width:30px; 
     height:auto; 
-    max-width:50px; 
-    margin-right: 30px; 
-    margin-top: 15px; 
+    max-width:30px; 
+    margin-right: 10px; 
+    margin-top: 5px; 
     position:relative; 
     cursor: pointer; 
  }
 
  .logoB{
-  width:80px; 
-  height:80px; 
-  max-width:80px; 
+  width:60px; 
+  height:60px; 
+  max-width:60px; 
   padding-left: 20px;
-  padding-top: 40px;
+  padding-top: 60px;
   float: left;
 }
 
