--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,11 @@ b{
   padding-right: 20px;
 }
 
+li{
+  font: 14px 'Rubik' ;
+  color: #ffffff;
+}
+
 p{
   font: 20px 'Rubik' ;
   color: #ffffff;
