--- a/src/styles.css
+++ b/src/styles.css
@@ -7,7 +7,16 @@
     background: #050617;  
 }
 
-
+.loading {
+  border: 8px solid #f3f3f3;
+  border-top: 8px solid #2588B2; 
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 1s linear infinite;
+  margin-top: 100px;
+  background-color: #ffffff;  
+}
 
 html,body{
   overflow-x: hidden;
@@ -407,7 +416,7 @@ img.mediaS:hover{
 
 .rectangleInfo {
   margin:auto;
-  height: 270px;
+  height: 210px;
   width: 400px;
   background-color: #f1f0f0;
   border-top-left-radius: 20px;
@@ -415,7 +424,7 @@ img.mediaS:hover{
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   border: 2px solid #2588B2;
-  margin-top: 130px; 
+  margin-top: 170px; 
   margin-right: 50px; 
   float: right; 
   overflow:hidden; 
@@ -523,7 +532,7 @@ input{
 
   .rectangleInfo {
     margin:auto;
-    height: 250px;
+    height: 170px;
     width: 290px;
     background-color: #f1f0f0;
     border-top-left-radius: 20px;
@@ -531,7 +540,7 @@ input{
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     border: 2px solid #2588B2;
-    margin-top: 0px; 
+    margin-top: 20px; 
     margin-right: 50px; 
     float: right; 
     overflow:hidden; 
@@ -817,7 +826,7 @@ input{
 
   .rectangleInfo {
     margin:auto;
-    height: 240px;
+    height: 160px;
     width: 290px;
     background-color: #f1f0f0;
     border-top-left-radius: 20px;
